<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_diet_index_is"
        android:id="@+id/textView_diet_index_is"
        android:layout_toStartOf="@+id/textView_diet_index"
        android:layout_marginTop="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_diet_index"
        android:id="@+id/textView_diet_index"
        android:textStyle="bold"
        android:layout_below="@+id/textView_diet_index_is"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_carbohydrate_index"
        android:id="@+id/textView_carb_index"
        android:layout_toStartOf="@+id/textView_diet_index"
        android:layout_above="@+id/textView_fat_index"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fat_index"
        android:id="@+id/textView_fat_index"
        android:layout_toStartOf="@+id/textView_diet_index"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_protein_index"
        android:id="@+id/textView_protein_index"
        android:layout_toStartOf="@+id/textView_diet_index"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView_fat_index"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>