<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:tag="@string/title_activity_diet_reports"
    tools:context="za.co.tribalapp.tribal.DietReportsActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_diet_index"
        android:id="@+id/button"
        android:layout_above="@+id/button7"
        android:layout_marginBottom="45dp"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7"
        android:onClick="displayDietIndex"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_daily_totals"
        android:id="@+id/button7"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="displayDietTotals"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list_of_meals"
        android:id="@+id/button9"
        android:layout_below="@+id/button7"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7"
        android:onClick="displayMealsList"/>

</RelativeLayout>
