<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_stress_index_is"
        android:id="@+id/textView_stress_index_is"
        android:layout_toStartOf="@+id/textView_stress_index"
        android:layout_marginTop="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_stress_index"
        android:id="@+id/textView_stress_index"
        android:textStyle="bold"
        android:layout_below="@+id/textView_stress_index_is"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_work_index"
        android:id="@+id/textView_work_index"
        android:layout_toStartOf="@+id/textView_stress_index"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView_stress_index"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sleep_index"
        android:id="@+id/textView_sleep_index"
        android:layout_toStartOf="@+id/textView_stress_index"
        android:layout_below="@+id/textView_stress_index"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"/>
    
</RelativeLayout>