<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="za.co.tribalapp.tribal.LogMealActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_previous_meals"
        android:id="@+id/button_previous_meals"
        android:onClick="previousMeals"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView_food_name"
        android:layout_toEndOf="@+id/textView_food_name"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_food_name"
        android:id="@+id/textView_food_name"
        android:layout_below="@+id/button_previous_meals"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"/>

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/autoCompleteTextView_food_name"
        android:layout_alignTop="@+id/textView_food_name"
        android:layout_toRightOf="@+id/textView_food_name"
        android:layout_toEndOf="@+id/textView_food_name"
        android:layout_alignRight="@+id/button_add_to_meal"
        android:layout_alignEnd="@+id/button_add_to_meal"
        android:textColor="@android:color/black"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_portion_amount"
        android:id="@+id/textView_portionSize"
        android:layout_alignTop="@+id/editText_portion_amount"
        android:layout_toLeftOf="@+id/editText_portion_amount"
        android:layout_toStartOf="@+id/editText_portion_amount"/>
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_portion_amount"
        android:layout_below="@+id/autoCompleteTextView_food_name"
        android:layout_alignLeft="@+id/autoCompleteTextView_food_name"
        android:layout_alignStart="@+id/autoCompleteTextView_food_name"
        android:layout_toStartOf="@+id/textView_portion_unit"
        android:layout_toLeftOf="@+id/textView_portion_unit"
        android:imeOptions="actionDone"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_portion_unit"
        android:hint="servings"
        android:id="@+id/textView_portion_unit"
        android:layout_toEndOf="@+id/textView_nutritional_info"
        android:layout_alignBaseline="@+id/editText_portion_amount"
        android:layout_alignBottom="@+id/editText_portion_amount"
        android:layout_toRightOf="@+id/textView_nutritional_info"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nutritional_info"
        android:id="@+id/textView_nutritional_info"
        android:layout_below="@+id/editText_portion_amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_carbs"
        android:id="@+id/textView_carbs"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView_nutritional_info"
        android:layout_toLeftOf="@+id/autoCompleteTextView_food_name"
        android:layout_toStartOf="@+id/autoCompleteTextView_food_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_carbs"
        android:layout_toEndOf="@+id/textView_carbs"
        android:layout_alignBaseline="@+id/textView_carbs"
        android:layout_alignBottom="@+id/textView_carbs"
        android:layout_alignLeft="@+id/editText_portion_amount"
        android:layout_alignStart="@+id/editText_portion_amount"
        android:layout_toStartOf="@+id/textView_portion_unit"
        android:layout_toLeftOf="@+id/textView_portion_unit"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fat"
        android:id="@+id/textView_fat"
        android:layout_toStartOf="@+id/editText_fat"
        android:layout_below="@+id/button_add_to_meal"
        android:layout_toLeftOf="@+id/editText_fat"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_fat"
        android:layout_toEndOf="@+id/textView_portionSize"
        android:layout_toStartOf="@+id/editText_carbs"
        android:layout_alignBaseline="@+id/textView_fat"
        android:layout_alignBottom="@+id/textView_fat"
        android:layout_alignLeft="@+id/editText_carbs"
        android:layout_alignStart="@+id/editText_carbs"
        android:layout_alignRight="@+id/editText_carbs"
        android:layout_alignEnd="@+id/editText_carbs"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_protein"
        android:id="@+id/textView_protein"
        android:layout_toStartOf="@+id/editText_fat"
        android:layout_below="@+id/editText_fat"
        android:layout_alignRight="@+id/textView_food_name"
        android:layout_alignEnd="@+id/textView_food_name"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_protein"
        android:layout_toEndOf="@+id/textView_protein"
        android:layout_alignTop="@+id/textView_protein"
        android:layout_toRightOf="@+id/textView_protein"
        android:layout_alignRight="@+id/textView_nutritional_info"
        android:layout_alignEnd="@+id/textView_nutritional_info"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_food"
        android:id="@+id/button_add_to_meal"
        android:onClick="addToMeal"
        android:layout_toEndOf="@+id/textView_nutritional_info"
        android:layout_below="@+id/textView_carbs"
        android:layout_alignLeft="@+id/textView_portion_unit"
        android:layout_alignStart="@+id/textView_portion_unit"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_meal"
        android:id="@+id/button_finish_meal"
        android:layout_toEndOf="@+id/button_previous_meals"
        android:onClick="saveMeal"
        android:layout_alignBaseline="@+id/textView_protein"
        android:layout_alignBottom="@+id/textView_protein"
        android:layout_alignLeft="@+id/button_add_to_meal"
        android:layout_alignStart="@+id/button_add_to_meal"
        android:layout_alignRight="@+id/button_add_to_meal"
        android:layout_alignEnd="@+id/button_add_to_meal"/>
</RelativeLayout>
